--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
         background-color: lightblue;
-        font-family: sans-serif;
+        font-family: "Helvecta", sans-serif;
       }
   </head>
 <body>
