--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         background-color: lightblue;
         font-family: "Helvecta", sans-serif;
       }
+    </style>
   </head>
   <body>
     <h1>Singapore Maps</h1>
